--- a/mpvue-wangyi/mpvue-shop/src/app.json
+++ b/mpvue-wangyi/mpvue-shop/src/app.json
@@ -13,7 +13,8 @@
     "pages/topicdetail/main",
     "pages/search/main",
     "pages/goods/main",
-    "pages/categorylist/main"
+    "pages/categorylist/main",
+    "pages/order/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
