订单order,地址选择addressSelect,地址添加addaddress完成

--- a/mpvue-wangyi/mpvue-shop/src/app.json
+++ b/mpvue-wangyi/mpvue-shop/src/app.json
@@ -14,7 +14,9 @@
     "pages/search/main",
     "pages/goods/main",
     "pages/categorylist/main",
-    "pages/order/main"
+    "pages/order/main",
+    "pages/addaddress/main",
+    "pages/addressSelect/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
